# balance-predictor

./: .gitignore  Makefile  README.md  configuration.py  conftest.py  docker-compose.yml  pipeline.Dockerfile  pipeline.config  preprocessor.py  requirements-dev.txt  requirements.txt  run_pipeline.sh  run_pipeline_local.sh  run_pipeline_remote.sh  run_scorer.sh  run_services.sh  run_submit_model.sh  run_with_uvicorn.sh  scorer.py  setup.cfg  show_plot.sh  spliter.py  splitter.py  trainer.py  validator.py
.github/workflows/: app.yml
data/: input.json  score_input.json  train_input.json
pipeline/: preprocessor.py  scorer.py  splitter.py  trainer.py  utils.py  validator.py
pipeline_scripts/: preprocessor.py  spliter.py  trainer.py  validator.py
secrets/: secret.key
src/: __main__.py  configuration.py  preprocess.py  score.py  split.py  train.py  utils.py  validate.py
tests/: conftest.py  test_preprocess.py  test_split.py  test_train.py  test_utils.py  test_validate.py
tests_old/: test_preprocess.py  test_split.py  test_train.py  test_utils.py  test_validate.py
tools/: generate_secret.py  show_plot.py
