[metadata]
name = MLOps-BalancePredictor-demo
version = file: VERSION.txt

[pylint.FORMAT]
# no-name-in-module due to limited pydantic support
disable=logging-fstring-interpolation,missing-module-docstring,missing-class-docstring,missing-function-docstring,fixme,pointless-string-statement,no-name-in-module,duplicate-code,invalid-name
max-line-length = 120
